--- a/inventories/demo-dev/webservers/inventory_webservers.yml
+++ b/inventories/demo-dev/webservers/inventory_webservers.yml
@@ -1,6 +1,6 @@
 ---
   dbservers:
     hosts:
-      node[1-2].bcnconsulting.com:
+      node[1:2].bcnconsulting.com:
       rhel7.bcnconsulting.com:
 ...
