--- a/inventories/demo-dev/dbservers/inventory_dbservers.yml
+++ b/inventories/demo-dev/dbservers/inventory_dbservers.yml
@@ -1,6 +1,6 @@
 ---
   dbservers:
     hosts:
-      node[3-4].bcnconsulting.com:
+      node[3:4].bcnconsulting.com:
       quorum.bcnconsulting.com:
 ...
