--- a/group_vars/dbservers/linux_config_motd.yml
+++ b/group_vars/dbservers/linux_config_motd.yml
@@ -1,4 +1,4 @@
 ---
 linux_config_motd_static: true
-linux_config_motd_default_message: "Message from group_vars dbservers - First Push"
+linux_config_motd_default_message: "Message from group_vars dbservers - Push Paulo"
 ...
