--- a/group_vars/webservers/linux_config_motd.yml
+++ b/group_vars/webservers/linux_config_motd.yml
@@ -1,4 +1,4 @@
 ---
 linux_config_motd_static: true
-linux_config_motd_default_message: "Message from group_vars webservers"
+linux_config_motd_default_message: "Message from group_vars webservers - Push Paulo"
 ...
